Squashed commit of the following:
commit 125e3c4900984bd4c36a6fdc1b156b111f77fee4
Author: Levan Kvirkvelia <lekvirkvelia@gmail.com>
Date:   Tue Jan 9 18:24:31 2024 -0600

    first action!

--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,19 @@
-name: 'The name of your action here'
+name: 'Click AI - Run Tests'
 description: 'Provide a description here'
-author: 'Your name or organization here'
+author: 'Click AI'
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  tests:
+    description: 'List of test IDs to run, newline separated'
     required: true
-    default: '1000'
+  apiKey:
+    description: 'Your API key'
+    required: true
 
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
+branding:
+  icon: 'fast-forward'
+  color: 'yellow'
 
 runs:
   using: node20
