--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ".": "./dist/index.js"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=18"
   },
   "scripts": {
     "bundle": "npm run format:write && npm run package",
@@ -64,7 +64,11 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/http-client": "^2.2.0"
+    "@actions/exec": "^1.1.1",
+    "@actions/http-client": "^2.2.0",
+    "@actions/io": "^1.1.3",
+    "@actions/tool-cache": "^2.0.1",
+    "clickai": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
