--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "rm -rf dist && yarn run bundle",
-    "bundle": "ncc build src/index.ts --license licenses.txt",
+    "bundle": "ncc build src/index.ts",
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg"
   },
   "license": "MIT",
