--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bundle": "ncc build src/index.ts",
     "release": "yarn git:push && yarn git:tag",
     "git:push": "yarn run build && git add . && git commit -m \"chore: release $(npm pkg get version)\" && git push",
-    "git:tag": "git tag -d v2 || true && git tag v2 && git push origin 21 --force",
+    "git:tag": "git tag -d v2 || true && git tag v2 && git push origin v2 --force",
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg"
   },
   "license": "MIT",
